Updates from travel to Kitchen

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
     <head>
 
-        <link type="text/css" rel="stylesheet" href="assets/stylesheets/travel.css"/>
+        <link type="text/css" rel="stylesheet" href="assets/stylesheets/kitchen.css"/>
 
-        <title>Amazing Travel Site</title>
+        <title>Amazing  Site</title>
 
     </head>
 
@@ -14,11 +14,11 @@
         <div id="masthead">
 
             <div id="logo">
-                <a href="/home.html">My Travel Site</a>
+                <a href="/home.html">My Kitchen Site</a>
             </div>
-            
+
             <div id="navbar">
-                
+
                 <ul id="nav-list">
 
                     <li class="nav-link">
@@ -49,75 +49,70 @@
 
             <div id="header-statement">
 
-                <h1>Welcome to my travel site</h1>
+                <h1>Welcome to my kitchen site</h1>
 
-                <p>This site is about places I would like to travel</p>
+                <p>This site is about places I would like to eat</p>
 
-                <h2>Here are some places I would like to visit</h2>
+                <h2>Here are some places I would like to eat</h2>
 
             </div>
 
             <div id="cards" class="page-row">
 
-                <div class="card" id="spain">
-                    <h3>Spain</h3>
-                    <a href="http://www.spain.info/en_US/" target="_blank">Spain Tourism Site</a>
+                <div class="card" id="rest_1">
+                    <h3>Rest 1</h3>
+                    <a href="http://www.spain.info/en_US/" target="_blank">Restaurant 1</a>
                 </div>
 
-                <div class="card" id="italy">
-                    <h3>Italy</h3>
-                    <a href="http://www.italia.it/en/home.html" target="_blank">Italy Tourism Site</a>
+                <div class="card" id="rest_2">
+                    <h3>Rest 2</h3>
+                    <a href="http://www.italia.it/en/home.html" target="_blank">Restaurant 2</a>
                 </div>
 
-                <div class="card" id="aruba">
-                    <h3>Aruba</h3>
-                    <a href="http://www.arubatourism.com/" target="_blank">Aruba Tourism Site</a>
+                <div class="card" id="rest_3">
+                    <h3>Rest 3</h3>
+                    <a href="http://www.arubatourism.com/" target="_blank">Restaurant 3</a>
                 </div>
 
-                <div class="card" id="chile">
-                    <h3>Chile</h3>
-                    <a href="http://chile.travel/en/" target="_blank">Chile Tourism Site</a>
+                <div class="card" id="rest_k">
+                    <h3>Rest K</h3>
+                    <a href="http://chile.travel/en/" target="_blank">Restaurant K</a>
                 </div>
 
             </div>
 
-            <div class="page-row" id="travel-table">
-                <h3>Some information about the places I would like to visit</h3>
+            <div class="page-row" id="kitchen-table">
+                <h3>Some information about the places I would like to eat</h3>
                 <table>
                     <tr>
-                        <th>Destination</th>
-                        <th>Capital</th>
-                        <th>Official Language</th>
-                        <th>Population (aprox.)</th>
-                        <th>National Bird</th>
+                        <th>Restaurant</th>
+                        <th>Address</th>
+                        <th>Phone Number</th>
+                        <th>Type</th>
                     </tr>
                     <tr>
-                        <td>Spain</td>
-                        <td>Madrid</td>
-                        <td>Spanish</td>
-                        <td>46.77 million</td>
-                        <td>Eagle</td>
+                        <td>Restaurant 1</td>
+                        <td>Address 1</td>
+                        <td>Phone 1</td>
+                        <td>Type 1</td>
                     </tr>
                     <tr>
-                        <td>Italy</td>
-                        <td>Rome</td>
-                        <td>Italian</td>
-                        <td>59.83 million</td>
-                        <td>Bluebirds</td>
+                        <td>Restaurant 2</td>
+                        <td>Address 2</td>
+                        <td>Phone 2</td>
+                        <td>Type 2</td>
                     </tr>
                     <tr>
-                        <td>Aruba</td>
-                        <td>Oranjestad</td>
-                        <td>Dutch</td>
-                        <td>102,911</td>
-                        <td>Aruban Burrowing Owl</td>
+                        <td>Restaurant 3</td>
+                        <td>Address 3</td>
+                        <td>Phone 3</td>
+                        <td>Type 3</td>
                     </tr>
                     <tr>
-                        <td>Chile</td>
-                        <td>Santiago</td>
-                        <td>Spanish</td>
-                        <td>17.62 million</td>
-                        <td>Andean condor</td>
+                        <td>My Kitchen</td>
+                        <td>Address K</td>
+                        <td>Phone K</td>
+                        <td>Type K</td>
                     </tr>
                 </table>
             </div>
@@ -126,7 +121,7 @@
 
         <div id="footer">
 
-            <div id="copyright">&copy; Travel is fun</div>
+            <div id="copyright">&copy; Eating is fun</div>
 
             <div id="social-links">
 
